# Beercadia

./: .gitignore  README.md  __init__.py  setup.cfg
hardware/: hardwarescan.py
mosquitto/: channel_to_db.py
webUI/: db.py  error.py  main.py  pages.py
webUI/static/: 404.css  error.css
webUI/templates/: 404notfound.html  base.html  error.html  favicons.snippet.html  hardware_list.html  main.html  svgplayground.html
