[metadata]
name = Beercadia-alpha
version = 0.0.1
author = Peter Harris
author_email = beercadia.pi@gmail.com
description = A kegerator / stand-up arcade machine
long_description = file: README.md
long_description_content_type - text/markdown
url = https://github.com/CoolPiotr/Beercadia
project_urls = 
	Bug Tracker = https://github.com/CoolPiotr/Beercadia/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Framework :: Flask
	Environment :: Console
	Topic :: Home Automation
	Topic :: System :: Hardware
	Topic :: Games/Entertainment :: Arcade
	Topic :: Beer
	Development Status :: 3 - Alpha

[options]
package_dir =
	= webUI
packages = find:
python_requires = >= 3.6

[options.package.find]
where = webUI
